--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ futures = "0.3"
 async-trait = "0.1"
 tower-http = "0.2"
 tokio-test = "*"
-test-context = "*"
+test-context = "0.1.3"
 lazy_static = "1.4"
 queues = "1.1"
 
