--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ hyper = { version = "0.14", features = ["full"] }
 futures = "0.3"
 async-trait = "0.1"
 tower-http = "0.2"
-tokio-test = "*"
+tokio-test = "0.4.2"
 test-context = "0.1.3"
 lazy_static = "1.4"
 queues = "1.1"
