--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tokiotest-httpserver"
 version = "0.1.0"
 authors = ["Bruno Thomas <bthomas@iroco.fr>"]
-license = "Apache-2.0"
+license = "MIT"
 description = "A simple http server to make unit/integration tests"
 repository = "https://github.com/iroco-co/tokiotest-httpserver"
 keywords = ["http", "tokio"]
@@ -23,4 +23,4 @@ lazy_static = "1.4"
 queues = "1.1"
 
 [dev-dependencies]
-serial_test = "*"
+serial_test = "0.6.0"
